src/test/ui/fmt/send-sync.stderr
error[E0277]: `dyn for<'r> Fn(&'r mut (dyn std::fmt::Write + 'r)) -> Result<(), std::fmt::Error>` cannot be shared between threads safely
  --> $DIR/send-sync.rs:8:10
   |
LL |     send(format_args!("{:?}", c));
   |     ---- ^^^^^^^^^^^^^^^^^^^^^^^ `dyn for<'r> Fn(&'r mut (dyn std::fmt::Write + 'r)) -> Result<(), std::fmt::Error>` cannot be shared between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Sync` is not implemented for `dyn for<'r> Fn(&'r mut (dyn std::fmt::Write + 'r)) -> Result<(), std::fmt::Error>`
   = note: required for `&dyn for<'r> Fn(&'r mut (dyn std::fmt::Write + 'r)) -> Result<(), std::fmt::Error>` to implement `Send`
   = note: required because it appears within the type `core::fmt::Inner<'_>`
   = note: required because it appears within the type `Arguments<'_>`
note: required by a bound in `send`
  --> $DIR/send-sync.rs:1:12
   |
LL | fn send<T: Send>(_: T) {}
   |            ^^^^ required by this bound in `send`

error[E0277]: `dyn for<'r> Fn(&'r mut (dyn std::fmt::Write + 'r)) -> Result<(), std::fmt::Error>` cannot be shared between threads safely
  --> $DIR/send-sync.rs:9:10
   |
LL |     sync(format_args!("{:?}", c));
   |     ---- ^^^^^^^^^^^^^^^^^^^^^^^ `dyn for<'r> Fn(&'r mut (dyn std::fmt::Write + 'r)) -> Result<(), std::fmt::Error>` cannot be shared between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `Arguments<'_>`, the trait `Sync` is not implemented for `dyn for<'r> Fn(&'r mut (dyn std::fmt::Write + 'r)) -> Result<(), std::fmt::Error>`
   = note: required because it appears within the type `&dyn for<'r> Fn(&'r mut (dyn std::fmt::Write + 'r)) -> Result<(), std::fmt::Error>`
   = note: required because it appears within the type `core::fmt::Inner<'_>`
   = note: required because it appears within the type `Arguments<'_>`
note: required by a bound in `sync`
  --> $DIR/send-sync.rs:2:12
   |
LL | fn sync<T: Sync>(_: T) {}
   |            ^^^^ required by this bound in `sync`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
